Fix overflow issue with log viewer
For some reason, the log viewer did not overflow correctly. If a log
entry was very long, the width of the log viewer expanded to fit the
length of the log entry. This messed up the layout, and pushed the
discovered devices section out of the viewport. In version 1.0, the
log viewer clipped the log entries and displayed a scroll bar.

Using position relative/absolute seems to fix the issue.

--- a/packages/nrfconnect-appmodule-ble/css/styles.less
+++ b/packages/nrfconnect-appmodule-ble/css/styles.less
@@ -636,9 +636,11 @@
 .log-wrap {
   background-color: @background-color;
   .infinite-log {
+    position: relative;
     overflow-x: auto !important;
     background-color: white;
     > div {
+      position: absolute;
       display: table;
       min-width: 100%;
     }
